# crace

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  README.md  get_resources.sh
.github/workflows/: dioxus.yml  rust.yml
public/: CNAME  custom.css
src/: app.rs  data.rs  exam_quizlist.rs  lib.rs  main.rs  quiz.rs  quizlist.rs  storage_man.rs  wronglist.rs
