[package]
name = "crace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
wasm-logger = "0.2"
web-sys = "0.3.64"
reqwest = { version = "0.11" }
dioxus = "0.4.0"
dioxus-router = "0.4.1"
dioxus-web = "0.4.0"
gloo-storage = "0.3.0"
linked_hash_set = { version = "0.1.4", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
# linked-hash-map = "0.5.6"
getrandom = { version = "0.2.10", features = ["js"] }
rand = { version = "0.8.5" }
